@@ -1,3 +1,6 @@
+16 June 2025: Wouter
+	- Fix to check control-interface addresses in unbound-checkconf.
+
 12 June 2025: Wouter
 	- Fix header return value description for skip_pkt_rrs and
 	  parse_edns_from_query_pkt.
